--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
-   "name": "vue-project",
-   "version": "0.0.0",
-   "private": true,
-   "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "preview": "vite preview",
-      "lint": "eslint . --fix --ignore-path .gitignore"
-   },
-   "dependencies": {
-      "@mdi/font": "7.0.96",
-      "@vuelidate/core": "^2.0.3",
-      "@vuelidate/validators": "^2.0.4",
-      "@vueuse/components": "^10.5.0",
-      "@vueuse/core": "^10.5.0",
-      "axios": "^1.5.1",
-      "core-js": "^3.29.0",
-      "pinia": "^2.1.7",
-      "roboto-fontface": "*",
-      "vue": "^3.2.0",
-      "vue-router": "^4.0.0",
-      "vuetify": "^3.0.0"
-   },
-   "devDependencies": {
-      "@vitejs/plugin-vue": "^4.0.0",
-      "eslint": "^8.37.0",
-      "eslint-config-prettier": "^9.0.0",
-      "eslint-plugin-vue": "^9.3.0",
-      "prettier": "3.0.3",
-      "sass": "^1.60.0",
-      "unplugin-fonts": "^1.0.3",
-      "vite": "^4.2.0",
-      "vite-plugin-vuetify": "^1.0.0"
-   }
+  "name": "coach-rael",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --fix --ignore-path .gitignore"
+  },
+  "dependencies": {
+    "@mdi/font": "7.0.96",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
+    "@vueuse/components": "^10.5.0",
+    "@vueuse/core": "^10.5.0",
+    "axios": "^1.5.1",
+    "core-js": "^3.29.0",
+    "pinia": "^2.1.7",
+    "roboto-fontface": "*",
+    "vue": "^3.2.0",
+    "vue-router": "^4.0.0",
+    "vuetify": "^3.0.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^4.0.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-vue": "^9.3.0",
+    "prettier": "3.0.3",
+    "sass": "^1.60.0",
+    "unplugin-fonts": "^1.0.3",
+    "vite": "^4.2.0",
+    "vite-plugin-vuetify": "^1.0.0"
+  }
 }
